[gd_scene load_steps=3 format=3 uid="uid://cth21gb7qtfsq"]

[ext_resource type="FontFile" uid="uid://cojsua2s34upb" path="res://textures/fonts/Better VCR 9.0.1.ttf" id="1_2yi6y"]
[ext_resource type="Script" uid="uid://jpiu0oinf0pc" path="res://scenes/win_screen/win_screen.gd" id="1_misvs"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_misvs")

[node name="WinLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -11.5
offset_right = 45.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2yi6y")
theme_override_font_sizes/font_size = 35
text = "Game Won!"

[node name="WoodLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = 90.0
offset_right = 61.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2yi6y")
text = "Wood collected: 0"

[node name="CoinsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = 150.0
offset_right = 38.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2yi6y")
text = "Coins left: 0"

[node name="EnemyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 270.0
offset_right = 60.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_2yi6y")
text = "Enemies killed: 0"

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = 210.0
offset_right = 45.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2yi6y")
text = "Time taken: 0s"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="ContinueLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2yi6y")
theme_override_font_sizes/font_size = 20
text = "Press \"space\" to restart the game"

[node name="TextBlinkTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TextBlinkTimer" to="." method="_on_text_blink_timer_timeout"]
